--- a/index.html
+++ b/index.html
@@ -3,5 +3,6 @@
 <body>
 <h1>Hello World</h1>
 <p>I'm hosted with GitHub Pages.</p>
+<p> This line was added from with terminal tools on a linux desktop. </p>
 </body>
 </html>
