--- a/test/me.html
+++ b/test/me.html
@@ -20,11 +20,11 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
     <!-- Left Column -->
     <div class="w3-third">
     
-      <div class="w3-white w3-text-grey w3-card-4">
+      <div class="w3-white w3-text-white w3-card-4">
         <div class="w3-display-container">
           <img src="/img/profile.JPG" style="width:100%" alt="Avatar">
           <div class="w3-display-bottomleft w3-container w3-text-black">
-            <h2>Jane Doe</h2>
+            <h2>John Sevdal</h2>
           </div>
         </div>
         <div class="w3-container">
