--- a/test/me.html
+++ b/test/me.html
@@ -33,7 +33,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           <hr>
 
           <p class="w3-large"><b><i class="fa fa-asterisk fa-fw w3-margin-right w3-text-teal"></i>Skills</b></p>
-          <p>Hardware development:</p>
+          <p>Hardware development</p>
           <p>EDA (Altium Designer)</p>
           <p>Rapid prototyping (3D printing, Laser cutting)</p>
           <p>3D CAD (Autodesk Inventor)</p>
