--- a/index.html
+++ b/index.html
@@ -5,5 +5,6 @@
 <p>I'm hosted with GitHub Pages.</p>
 <p> This line was added from with terminal tools on a linux desktop. </p>
 <p> branch </p>
+ <a href="about.html">about me</a> 
 </body>
 </html>
