--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
   <head>
   <title> About me </title>
   </head>
-  <body
+  <body>
   <h1> Welcome! </h1>
   <p> I am John.
       born Faroe Islands, grew up in west jutland. </p>
